methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:3: error: missing arguments for method faireV in class MethodsPicture;
follow this method with `_' if you want to treat it as a partially applied function
    faireV ;
    ^