methods.picture.MethodsPicture.scala.code
override def run() {
  for (i<-1 to 4) {
    faireV ;
  }
}
def dessine() {
    baisseBrosse; leveBrosse;
  }
  def faireV(c:Color) {
    setCouleurBrosse(c)
    avance;avance;
    dessine;
    gauche;avance;droite;avance
    dessine;
    avance;droite;avance;
    dessine;//fais le v 
    gauche;avance;avance;gauche;// se positionne pour le prochain
  }